# cxk-amazon-assistant1

./: BUILD.md  DEPLOY.md  FINAL_TEST_REPORT.md  GITHUB_BUILD.md  GITHUB_BUILD_GUIDE.md  QUICK_START.md  README.md  TEST_PLAN.md  TEST_REPORT.md  UI_DEMO.md  WINDOWS_DEPLOY.md  WINDOWS_QUICK_REF.md  build-installer.bat  build-local-simple.ps1  build-local.ps1  deploy-win-simple.ps1  deploy-windows.ps1  run_tests.sh  setup.bat  tauri.conf.json
.github/workflows/: build.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/ColumnSelector/: ColumnSelector.vue
frontend/src/components/Common/: EmptyState.vue
frontend/src/components/Dashboard/: ScoreDisplay.vue  StatusBadge.vue
frontend/src/router/: index.ts
frontend/src/services/: ai-service.ts  export-service.ts
frontend/src/stores/: data.ts  settings.ts
frontend/src/utils/: error-handler.ts  file-validator.ts  shortcuts.ts  tauri.ts
frontend/src/views/: DashboardView.vue  HomeView.vue  OptimizationView.vue  SettingsView.vue  TemplatesView.vue  UploadView.vue
src-tauri/: Cargo.toml  generate-icons.ps1  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: commands.rs  database.rs  file_parser.rs  lib.rs  main.rs
test_data/: test_advertising.csv  test_am67.csv  test_business.csv
