[package]
name = "cxk-amazon-assistant"
version = "1.0.0"
description = "CXK Amazon Assistant"
edition = "2021"
rust-version = "1.77.0"

[lib]
name = "cxk_amazon_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
calamine = "0.24"
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
