[package]
name = "cxk-amazon-assistant"
version = "1.0.0"
description = "CXK运营决策助手 - 亚马逊运营决策支持系统"
authors = ["CXK Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cxk_amazon_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cxk-amazon-assistant"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
calamine = "0.24"
csv = "1.3"

[features]
default = []
